# GifFramework

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/amusia/gifframework/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gif_lib.h  native-lib.cpp
app/src/main/java/com/amusia/gifframework/: GifLoader.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/amusia/gifframework/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
